Issue #451: add Indentation to checkstyle config